objects/CA_Comm_URL__c.object
<CustomObject>
    <fields>
        <fullName>CA_Communication_Title__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CA Communication Title</label>
        <referenceTo>CA_Communication__c</referenceTo>
        <relationshipLabel>CA Comm URLs</relationshipLabel>
        <relationshipName>CA_Comm_URLs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CA Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CA Comm URLs</relationshipLabel>
        <relationshipName>CA_Comm_URLs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CA Comm URLs</relationshipLabel>
        <relationshipName>CA_Comm_URLs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>URL to responses</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>CA Comm URL</label>
    <nameField>
        <displayFormat>U{00000}</displayFormat>
        <label>CA Comm URL Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Comm URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>